--- a/source/posts/2015/05-18-podcast-03-19.md.erb
+++ b/source/posts/2015/05-18-podcast-03-19.md.erb
@@ -23,7 +23,7 @@ main_image: "/images/static/03/0319.png"
 
 ## JavaScript
 
- - [Node.js and IO.js are merging under the Node Foundation](http://www.infoq.com/news/2015/05/nodejs-iojs), [Backbone.js 1.2.0](http://backbonejs.org/#changelog), [Polymer 0.9](https://blog.polymer-project.org/announcements/2015/05/14/0.9-release/) и [Ember.js 1.12 and 1.13 beta](http://emberjs.com/blog/2015/05/13/ember-1-12-released.html)
+ - [Node.js and IO.js are merging under the Node Foundation](http://www.infoq.com/news/2015/05/nodejs-iojs), [MS fork of NodeJS](https://github.com/Microsoft/node), [Backbone.js 1.2.0](http://backbonejs.org/#changelog), [Polymer 0.9](https://blog.polymer-project.org/announcements/2015/05/14/0.9-release/) и [Ember.js 1.12 and 1.13 beta](http://emberjs.com/blog/2015/05/13/ember-1-12-released.html)
  - [JavaScript at 20](http://brendaneich.github.io/ModernWeb.tw-2015/#1), [Deck of Cards - an API to simulate a deck of cards](https://github.com/crobertsbmw/deckofcards), [Fake IndexedDB](https://github.com/dumbmatter/fakeIndexedDB) и [Pintsize - a Sass front end template](http://pintsize.io/)
  - [Justice.js - a performance metric bar with a streaming FPS graph](http://okor.github.io/justice/), [Watermark.js - a functional ES6 library for watermarking in the browser](http://brianium.github.io/watermarkjs/) и [Facey Face](http://gabetaubman.com/projects/faces/)
  - [A re-introduction to JavaScript (JS tutorial)](https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript) и [ES Feature Tests](https://featuretests.io/)
