--- a/source/posts/2015/05-18-podcast-03-19.md.erb
+++ b/source/posts/2015/05-18-podcast-03-19.md.erb
@@ -19,7 +19,7 @@ main_image: "/images/static/03/0319.png"
  - [Rust 1.0](http://blog.rust-lang.org/2015/05/15/Rust-1.0.html), [Критика языка Rust и почему C/C++ никогда не умрет](http://eax.me/cpp-will-never-die/) и [How to update large tables in PostgreSQL](http://blog.codacy.com/2015/05/14/how-to-update-large-tables-in-postgresql/)
  - [Rails: Don’t "pluck" Unnecessarily](http://6ftdan.com/allyourdev/2015/05/13/rails-dont-pluck-unnecessarily/), [Functional Programming dictionary with Ruby](https://medium.com/@KamilLelonek/functional-programming-dictionary-with-ruby-38e39b3ddcba) и [Immutable Iterators with Tom Stuart](http://devblog.avdi.org/2015/05/14/new-rubytapas-freebie-immutable-iterators-with-tom-stuart/)
  - [Timeout: Ruby's Most Dangerous API](http://www.mikeperham.com/2015/05/08/timeout-rubys-most-dangerous-api/), [Encrypting secrets with Rails](http://cookieshq.co.uk/posts/encrypting-secrets-with-rails/) и [Gush - easily run complex workflows in parallel with Sidekiq](https://github.com/pokonski/gush)
- - [10 Advanced Features of Regex in Ruby](http://idiosyncratic-ruby.com/11-regular-extremism.html), [Linux Isolation Basics](https://blog.engineyard.com/2015/linux-containers-isolation) и [The Art of Programming](https://medium.com/art-of-programming/the-creative-programmer-2dde54f83e3a)
+ - [10 Advanced Features of Regex in Ruby](http://idiosyncratic-ruby.com/11-regular-extremism.html), [Linux Isolation Basics](https://blog.engineyard.com/2015/linux-containers-isolation) и [Prelang - Automatic Rails Development](https://prelang.com/)
 
 ## JavaScript
 
