--- a/source/api/podcasts.json.erb
+++ b/source/api/podcasts.json.erb
@@ -1,5 +1,5 @@
-<%- i = blog.tags["podcasts"][0..10].size + 1 -%>
-<%= MultiJson.dump(blog.tags["podcasts"][0..10].map do |article|
+<%- i = blog.tags["podcasts"][0..30].size + 1 -%>
+<%= MultiJson.dump(blog.tags["podcasts"][0..30].map do |article|
   {id: (i -= 1), title: article.title,
   summary: (sanitize_tags(truncate(article.body, :length => 150))),
   description: article.body,
@@ -7,6 +7,7 @@
   link: "#{default_main_url_helper}#{article.url}",
   main_img: (article.data.main_image ? "#{default_main_url_helper}#{article.data.main_image}" : default_image_helper),
   audio_url: article.data.audio_url,
+  audio_mirror_url: article.data.audio_mirror,
   audio_file_size: article.data.audio_length,
   audio_type: (article.data.audio_format || "audio/mpeg"),
   audio_duration: (article.data.duration ? article.data.duration : "00:30:00")}
