--- a/source/posts/2015/06-01-podcast-03-21.md.erb
+++ b/source/posts/2015/06-01-podcast-03-21.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "21 выпуск 03 сезона.  и прочее"
+title: "21 выпуск 03 сезона. Make Your Own Rack Server, Waterfall, Polymer 1.0, Telescope, TremulaJS, Pavlov.js и прочее"
 date: 2015-06-01
 tags:
  - podcasts
@@ -16,14 +16,15 @@ main_image: "/images/static/03/0321.png"
 
 ## Ruby
 
- - [Recursion in Ruby](http://www.leighhalliday.com/recursion-in-ruby)
+ - [Make Your Own Rack Server](http://www.blrice.net/blog/2015/05/31/make-your-own-rack-server/) и [Ruby's Exception vs StandardError: What's the difference?](http://blog.honeybadger.io/ruby-exception-vs-standarderror-whats-the-difference/)
+ - [React.js - A guide for Rails developers](https://www.airpair.com/reactjs/posts/reactjs-a-guide-for-rails-developers) и [Recursion in Ruby](http://www.leighhalliday.com/recursion-in-ruby)
+ - [Dynamic Site as fast as a Static Generated One with Raptor](http://www.akitaonrails.com/2015/05/20/dynamic-site-as-fast-as-a-static-generated-one-with-raptor) и [Waterfall - a slice of functional programming to chain ruby services and blocks](https://github.com/apneadiving/waterfall)
 
 ## JavaScript
 
- - [Why We Should Stop Using Bower](http://gofore.com/ohjelmistokehitys/stop-using-bower/)
- - [Vibrant.js - extract prominent colors from an image](https://jariz.github.io/vibrant.js/)
- - [Telescope - an open-source social news app built with Meteor](http://www.telescopeapp.org/)
- - [Building a Slack Clone in Meteor.js: Getting Started](https://scotch.io/tutorials/building-a-slack-clone-in-meteor-js-getting-started)
+ - [Polymer 1.0](http://googledevelopers.blogspot.com/2015/05/polymer-10-released.html), [Why We Should Stop Using Bower](http://gofore.com/ohjelmistokehitys/stop-using-bower/) и [Everything You Need to Know About Strings in Javascript](http://taha-sh.com/blog/everything-you-need-to-know-about-strings-in-javascript)
+ - [Building a Slack Clone in Meteor.js: Getting Started](https://scotch.io/tutorials/building-a-slack-clone-in-meteor-js-getting-started) и [Telescope - an open-source social news app built with Meteor](http://www.telescopeapp.org/)
+ - [TremulaJS: Picture Streams + Momentum Engine + Bézier Paths](http://garris.github.io/TremulaJS/), [Vibrant.js - extract prominent colors from an image](https://jariz.github.io/vibrant.js/) и [Pavlov.js - reinforcement learning using Markov Decision Processes](https://github.com/NathanEpstein/Pavlov.js)
 
 READMORE
 
