--- a/source/posts/2015/06-02-podcast-03-21.md.erb
+++ b/source/posts/2015/06-02-podcast-03-21.md.erb
@@ -1,13 +1,13 @@
 ---
 title: "21 выпуск 03 сезона. Make Your Own Rack Server, Waterfall, Polymer 1.0, Telescope, TremulaJS, Pavlov.js и прочее"
-date: 2015-06-01
+date: 2015-06-02
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/107/file/podfm_rwpod_my_20_107.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.20/0320.mp3"
+audio_url: "http://rwpod.podfm.ru/my/108/file/podfm_rwpod_my_21_108.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.21/0321.mp3"
 audio_format: "audio/mpeg"
-audio_length: 41553242
-duration: "00:43:11"
+audio_length: 44042079
+duration: "00:45:46"
 small_icon: mic
 main_image: "/images/static/03/0321.png"
 ---
@@ -24,7 +24,7 @@ main_image: "/images/static/03/0321.png"
 
  - [Polymer 1.0](http://googledevelopers.blogspot.com/2015/05/polymer-10-released.html), [Why We Should Stop Using Bower](http://gofore.com/ohjelmistokehitys/stop-using-bower/) и [Everything You Need to Know About Strings in Javascript](http://taha-sh.com/blog/everything-you-need-to-know-about-strings-in-javascript)
  - [Building a Slack Clone in Meteor.js: Getting Started](https://scotch.io/tutorials/building-a-slack-clone-in-meteor-js-getting-started) и [Telescope - an open-source social news app built with Meteor](http://www.telescopeapp.org/)
- - [TremulaJS: Picture Streams + Momentum Engine + Bézier Paths](http://garris.github.io/TremulaJS/), [Vibrant.js - extract prominent colors from an image](https://jariz.github.io/vibrant.js/) и [Pavlov.js - reinforcement learning using Markov Decision Processes](https://github.com/NathanEpstein/Pavlov.js)
+ - [TremulaJS: Picture Streams + Momentum Engine + Bézier Paths](http://garris.github.io/TremulaJS/), [Vibrant.js - extract prominent colors from an image](https://jariz.github.io/vibrant.js/) и [Pavlov.js - reinforcement learning using Markov Decision Processes](https://github.com/NathanEpstein/Pavlov.js) ([Markov Chains](http://setosa.io/blog/2014/07/26/markov-chains/index.html))
 
 READMORE
 
