--- a/source/posts/2015/06-07-podcast-03-22.md.erb
+++ b/source/posts/2015/06-07-podcast-03-22.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "22 выпуск 03 сезона.  и прочее"
+title: "22 выпуск 03 сезона. Benchmarking Ruby Dispatch Strategies, Limitations of Language, Is ReactJS really fast?, Watcher.js и прочее"
 date: 2015-06-07
 tags:
  - podcasts
@@ -16,25 +16,15 @@ main_image: "/images/static/03/0322.png"
 
 ## Ruby
 
- - [Benchmarking Ruby Dispatch Strategies](http://devblog.avdi.org/2015/06/03/benchmarking-ruby-dispatch-strategies/)
- - [Hash and default\_proc](http://thingsinabucket.com/2015/05/27/hash_default_proc/)
- - [Enumerable#pluck](https://github.com/rails/rails/pull/20350)
- - [Demystifying @tenderlove's homeopathic code optimizations](http://nithinbekal.com/posts/homeopathic-code-optimizations/)
- - [Two modules, one method](http://dabrorius.github.io/2015/06/two-modules-one-method.html)
- - [Limitations of Language](http://idiosyncratic-ruby.com/29-limitations-of-language.html)
- - [How a Bug in My Ruby Code Cost Code School $13,000](https://www.codeschool.com/blog/2015/06/04/how-a-bug-in-my-ruby-code-cost-code-school-13000/)
- - [10 RoR Books You Must Have on Your Bookshelf](https://netguru.co/blog/ruby-rails-books)
+ - [Benchmarking Ruby Dispatch Strategies](http://devblog.avdi.org/2015/06/03/benchmarking-ruby-dispatch-strategies/) и [Hash and default\_proc](http://thingsinabucket.com/2015/05/27/hash_default_proc/)
+ - [Limitations of Language](http://idiosyncratic-ruby.com/29-limitations-of-language.html), [Demystifying @tenderlove's homeopathic code optimizations](http://nithinbekal.com/posts/homeopathic-code-optimizations/) и [Enumerable#pluck](https://github.com/rails/rails/pull/20350)
+ - [How a Bug in My Ruby Code Cost Code School $13,000](https://www.codeschool.com/blog/2015/06/04/how-a-bug-in-my-ruby-code-cost-code-school-13000/), [Two modules, one method](http://dabrorius.github.io/2015/06/two-modules-one-method.html) и [10 RoR Books You Must Have on Your Bookshelf](https://netguru.co/blog/ruby-rails-books)
 
 ## JavaScript
 
- - [Are JavaScript Promises swallowing your errors?](http://jamesknelson.com/are-es6-promises-swallowing-your-errors/)
- - [Is ReactJS really fast?](http://blog.500tech.com/is-reactjs-fast/)
- - [No more CSS grid frameworks](http://leo.github.io/blog/no-more-css-grid-frameworks/)
- - [Nudity detection with JavaScript and HTMLCanvas](http://www.patrick-wied.at/static/nudejs/)
- - [Watcher.js - an easy to set-up javascript security/motion detection camera](http://martijnwelker.github.io/Watcher.js/)
- - [Pin.js - dependency free plugin to Pin elements as you scroll](http://mauriciosoares.github.io/pin.js/)
- - [JavaScript Code Smells](http://elijahmanor.com/javascript-smells/)
- - [NotifyMe.js – A Simple Notification Library](http://shivganesh.com/2015/05/notifyme-js-a-simple-notification-library/)
+ - [Are JavaScript Promises swallowing your errors?](http://jamesknelson.com/are-es6-promises-swallowing-your-errors/) и [Is ReactJS really fast?](http://blog.500tech.com/is-reactjs-fast/)
+ - [No more CSS grid frameworks](http://leo.github.io/blog/no-more-css-grid-frameworks/), [Nudity detection with JavaScript and HTMLCanvas](http://www.patrick-wied.at/static/nudejs/) и [Watcher.js - an easy to set-up javascript security/motion detection camera](http://martijnwelker.github.io/Watcher.js/)
+ - [JavaScript Code Smells](http://elijahmanor.com/javascript-smells/), [Pin.js - dependency free plugin to Pin elements as you scroll](http://mauriciosoares.github.io/pin.js/) и [NotifyMe.js – A Simple Notification Library](http://shivganesh.com/2015/05/notifyme-js-a-simple-notification-library/)
 
 READMORE
 
