--- a/source/posts/2015/06-15-podcast-03-23.md.erb
+++ b/source/posts/2015/06-15-podcast-03-23.md.erb
@@ -1,13 +1,13 @@
 ---
 title: "23 выпуск 03 сезона. The Rubyist's Guide to Environment Variables, Cells 4.0, Angular Classy, Chakram, BackstopJS и прочее"
-date: 2015-06-14
+date: 2015-06-15
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/109/file/podfm_rwpod_my_22_109.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.22/0322.mp3"
+audio_url: "http://rwpod.podfm.ru/my/111/file/podfm_rwpod_my_23_111.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.23/0323.mp3"
 audio_format: "audio/mpeg"
-audio_length: 41592726
-duration: "00:43:13"
+audio_length: 42799212
+duration: "00:44:28"
 small_icon: mic
 main_image: "/images/static/03/0323.png"
 ---
@@ -22,7 +22,7 @@ main_image: "/images/static/03/0323.png"
 
 ## JavaScript
 
- - [Writing a non-blocking JavaScript quicksort](http://www.breck-mckye.com/blog/2015/06/writing-a-non-blocking-javascript-quicksort/) и [React Native – Share Your Application Logic on Web and Mobile](http://gofore.com/ohjelmistokehitys/react-native-share-application-logic-web-mobile/)
+ - [React Native – Share Your Application Logic on Web and Mobile](http://gofore.com/ohjelmistokehitys/react-native-share-application-logic-web-mobile/) и [Writing a non-blocking JavaScript quicksort](http://www.breck-mckye.com/blog/2015/06/writing-a-non-blocking-javascript-quicksort/)
  - [Angular Classy](http://davej.github.io/angular-classy/), [React State Transitions](https://github.com/jacobp100/state-transitions) и [Learn JavaScript and Up Your Photoshop Game](http://blog.teamtreehouse.com/learn-javascript-photoshop-game)
  - [Chakram - a REST API testing framework](http://dareid.github.io/chakram/), [BackstopJS - automates CSS regression testing of your responsive web UI by comparing DOM screenshots at various viewport sizes](https://garris.github.io/BackstopJS/) и [Canvas: walking simulater (sidescroller)](https://paulb.gd/canvas-walking-simulater/)
 
