--- a/source/posts/2015/06-29-podcast-03-24.md.erb
+++ b/source/posts/2015/06-29-podcast-03-24.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "24 выпуск 03 сезона. Rails 3.2.22, 4.1.11 и 4.2.2, Atom 1.0, Ruby Raven, WebAssembly, Nuclide, FullCalendar и прочее"
+title: "24 выпуск 03 сезона. Rails 4.1.12 и 4.2.3, Atom 1.0, Ruby Raven, WebAssembly, Nuclide, FullCalendar и прочее"
 date: 2015-06-29
 tags:
  - podcasts
