--- a/source/posts/2015/07-06-podcast-03-25.md.erb
+++ b/source/posts/2015/07-06-podcast-03-25.md.erb
@@ -23,11 +23,18 @@ main_image: "/images/static/03/0325.png"
  - [Rails vs. Lotus](http://teotti.com/rails-vs-lotus/)
  - [Gkv - git as a key/value store](https://github.com/ybur-yug/gkv)
  - [Squib - a Ruby DSL for prototyping card and board games](http://andymeneely.github.io/squib/)
+ - [Rack: Writing middleware](http://rubylogs.com/writing-rack-middleware/)
+ - [Terminal Kung Fu - Tips and Tricks for the power developer](http://www.rubyonrails365.com/tips-and-tricks/)
 
 ## JavaScript
 
+ - [Polymer 1.0](https://www.polymer-project.org/1.0/)
  - [Cycle.js - a fully reactive JavaScript framework for Human-Computer Interaction](http://cycle.js.org/)
  - [React Koans - learn React.js in ES6 by practice](https://github.com/arkency/reactjs_koans)
+ - [ReactCSS - Bringing Classes to Inline Styles](http://reactcss.com/)
+ - [ES6 Feature Performance](http://www.incaseofstairs.com/2015/06/es6-feature-performance/)
+ - [React + Performance = ?](https://aerotwist.com/blog/react-plus-performance-equals-what/)
+ - [You Might Not Need Underscore](https://www.reindex.io/blog/you-might-not-need-underscore/)
 
 READMORE
 
