--- a/source/posts/2015/07-06-podcast-03-25.md.erb
+++ b/source/posts/2015/07-06-podcast-03-25.md.erb
@@ -29,9 +29,14 @@ main_image: "/images/static/03/0325.png"
 ## JavaScript
 
  - [Polymer 1.0](https://www.polymer-project.org/1.0/)
+ - [What kind of Web Components do we need?](https://hiddedevries.nl/en/blog/2015-07-02-what-kind-of-web-components-do-we-need)
+ - [Over the edge: Web Components are an endangered species](http://christianheilmann.com/2015/07/01/over-the-edge-web-components-are-an-endangered-species/)
+ - [Why Web Components will make the web a better place for our users](https://medium.com/@kaelig/why-web-components-will-make-the-web-a-better-place-for-our-users-38dc3154fc1d)
+ - [Why availability matters](http://www.kryogenix.org/code/browser/why-availability/)
  - [Cycle.js - a fully reactive JavaScript framework for Human-Computer Interaction](http://cycle.js.org/)
  - [React Koans - learn React.js in ES6 by practice](https://github.com/arkency/reactjs_koans)
  - [ReactCSS - Bringing Classes to Inline Styles](http://reactcss.com/)
+ - [Spectacle — библиотека для презентаций на ReactJS](http://projects.formidablelabs.com/spectacle/)
  - [ES6 Feature Performance](http://www.incaseofstairs.com/2015/06/es6-feature-performance/)
  - [React + Performance = ?](https://aerotwist.com/blog/react-plus-performance-equals-what/)
  - [You Might Not Need Underscore](https://www.reindex.io/blog/you-might-not-need-underscore/)
