--- a/source/css/audio.css.sass
+++ b/source/css/audio.css.sass
@@ -138,7 +138,6 @@
   height: 7px
   cursor: pointer
   background: #d2cec3
-  box-shadow: 0 1px 1px rgba(255, 255, 255, 0.1)
   border-radius: 1px
   &:before
     content: " "
@@ -159,10 +158,12 @@
 /* Diagonal Background Bars
 
 .jp-play-bar, .jp-volume-bar-value
-  box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.3)
   background-size: 7px 7px
   background-color: #7d7a6f
   background-repeat: repeat-x
+
+.jp-volume-bar-value
+  background: #4D4B42
 
 /* TIME HOLDER
  *-----------------------------------------------
