--- a/source/posts/2015/07-06-podcast-03-25.md.erb
+++ b/source/posts/2015/07-06-podcast-03-25.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "25 выпуск 03 сезона.  и прочее"
+title: "25 выпуск 03 сезона. Rails vs. Lotus, Rack: Writing middleware, Gkv, ES6 Feature Performance, Spectacle и прочее"
 date: 2015-07-06
 tags:
  - podcasts
@@ -16,30 +16,17 @@ main_image: "/images/static/03/0325.png"
 
 ## Ruby
 
- - [Creating Easy, Readable Attributes With ActiveRecord Enums](http://www.justinweiss.com/blog/2015/06/30/creating-easy-readable-attributes-with-activerecord-enums/)
- - [Dynamic connectivity with Ruby](http://davidmles.com/blog/dynamic-connectivity-ruby/)
- - [How do I encrypt data in my database?](http://theartandscienceofruby.com/2015/06/29/how-do-i-encrypt-data-in-my-database/)
- - [Lazy image creation with Carrierwave](http://firedev.com/posts/2015/lazy-image-creation-with-carrierwave/)
- - [Rails vs. Lotus](http://teotti.com/rails-vs-lotus/)
- - [Gkv - git as a key/value store](https://github.com/ybur-yug/gkv)
- - [Squib - a Ruby DSL for prototyping card and board games](http://andymeneely.github.io/squib/)
- - [Rack: Writing middleware](http://rubylogs.com/writing-rack-middleware/)
- - [Terminal Kung Fu - Tips and Tricks for the power developer](http://www.rubyonrails365.com/tips-and-tricks/)
+ - [Rails vs. Lotus](http://teotti.com/rails-vs-lotus/), [Creating Easy, Readable Attributes With ActiveRecord Enums](http://www.justinweiss.com/blog/2015/06/30/creating-easy-readable-attributes-with-activerecord-enums/) и [Dynamic connectivity with Ruby](http://davidmles.com/blog/dynamic-connectivity-ruby/)
+ - [How do I encrypt data in my database?](http://theartandscienceofruby.com/2015/06/29/how-do-i-encrypt-data-in-my-database/) и [Lazy image creation with Carrierwave](http://firedev.com/posts/2015/lazy-image-creation-with-carrierwave/)
+ - [Rack: Writing middleware](http://rubylogs.com/writing-rack-middleware/) и [Terminal Kung Fu - Tips and Tricks for the power developer](http://www.rubyonrails365.com/tips-and-tricks/)
+ - [Gkv - git as a key/value store](https://github.com/ybur-yug/gkv) и [Squib - a Ruby DSL for prototyping card and board games](http://andymeneely.github.io/squib/)
 
 ## JavaScript
 
- - [Polymer 1.0](https://www.polymer-project.org/1.0/)
- - [What kind of Web Components do we need?](https://hiddedevries.nl/en/blog/2015-07-02-what-kind-of-web-components-do-we-need)
- - [Over the edge: Web Components are an endangered species](http://christianheilmann.com/2015/07/01/over-the-edge-web-components-are-an-endangered-species/)
- - [Why Web Components will make the web a better place for our users](https://medium.com/@kaelig/why-web-components-will-make-the-web-a-better-place-for-our-users-38dc3154fc1d)
- - [Why availability matters](http://www.kryogenix.org/code/browser/why-availability/)
- - [Cycle.js - a fully reactive JavaScript framework for Human-Computer Interaction](http://cycle.js.org/)
- - [React Koans - learn React.js in ES6 by practice](https://github.com/arkency/reactjs_koans)
- - [ReactCSS - Bringing Classes to Inline Styles](http://reactcss.com/)
- - [Spectacle — библиотека для презентаций на ReactJS](http://projects.formidablelabs.com/spectacle/)
- - [ES6 Feature Performance](http://www.incaseofstairs.com/2015/06/es6-feature-performance/)
- - [React + Performance = ?](https://aerotwist.com/blog/react-plus-performance-equals-what/)
- - [You Might Not Need Underscore](https://www.reindex.io/blog/you-might-not-need-underscore/)
+ - [What kind of Web Components do we need?](https://hiddedevries.nl/en/blog/2015-07-02-what-kind-of-web-components-do-we-need), [Over the edge: Web Components are an endangered species](http://christianheilmann.com/2015/07/01/over-the-edge-web-components-are-an-endangered-species/) и [Why Web Components will make the web a better place for our users](https://medium.com/@kaelig/why-web-components-will-make-the-web-a-better-place-for-our-users-38dc3154fc1d)
+ - [You Might Not Need Underscore](https://www.reindex.io/blog/you-might-not-need-underscore/) и [Why availability matters](http://www.kryogenix.org/code/browser/why-availability/)
+ - [ES6 Feature Performance](http://www.incaseofstairs.com/2015/06/es6-feature-performance/) и [Cycle.js - a fully reactive JavaScript framework for Human-Computer Interaction](http://cycle.js.org/)
+ - [React + Performance = ?](https://aerotwist.com/blog/react-plus-performance-equals-what/), [React Koans - learn React.js in ES6 by practice](https://github.com/arkency/reactjs_koans), [ReactCSS - Bringing Classes to Inline Styles](http://reactcss.com/) и [Spectacle — библиотека для презентаций на ReactJS](http://projects.formidablelabs.com/spectacle/)
 
 READMORE
 
