--- a/source/posts/2015/07-13-podcast-03-26.md.erb
+++ b/source/posts/2015/07-13-podcast-03-26.md.erb
@@ -24,6 +24,7 @@ main_image: "/images/static/03/0326.png"
 
 ## JavaScript
 
+ - [Introducing Incremental DOM](https://medium.com/google-developers/introducing-incremental-dom-e98f79ce2c5f)
  - [20 best javascript frameworks for programmers](http://www.dzinerslane.com/20-best-javascript-frameworks-for-programmers/)
 
 
