--- a/source/posts/2015/07-13-podcast-03-26.md.erb
+++ b/source/posts/2015/07-13-podcast-03-26.md.erb
@@ -21,6 +21,7 @@ main_image: "/images/static/03/0326.png"
  - [5 TDD Antipatterns](https://www.madetech.com/news/5-tdd-antipatterns)
  - [JRuby - Just Ruby](http://blog.eurucamp.org/2015/07/08/jruby-just-ruby/)
  - [Modules in Ruby](http://jakeyesbeck.com/2015/07/05/composition-in-ruby/)
+ - [Action Cable – Integrated websockets for Rails](https://github.com/rails/actioncable)
 
 ## JavaScript
 
