--- a/source/posts/2015/07-13-podcast-03-26.md.erb
+++ b/source/posts/2015/07-13-podcast-03-26.md.erb
@@ -16,6 +16,7 @@ main_image: "/images/static/03/0326.png"
 
 ## Ruby
 
+ - [4 Easy Ways to Speed Up Your Rails App](http://blog.skylight.io/4-easy-ways-to-speed-up-your-rails-app/)
  - [Ruby is defined by terrible tools](http://devblog.avdi.org/2015/07/08/ruby-is-defined-by-terrible-tools/)
  - [How to write Rails middleware](http://rubylogs.com/writing-rails-middleware/)
  - [5 TDD Antipatterns](https://www.madetech.com/news/5-tdd-antipatterns)
