--- a/source/posts/2015/07-13-podcast-03-26.md.erb
+++ b/source/posts/2015/07-13-podcast-03-26.md.erb
@@ -23,11 +23,18 @@ main_image: "/images/static/03/0326.png"
  - [JRuby - Just Ruby](http://blog.eurucamp.org/2015/07/08/jruby-just-ruby/)
  - [Modules in Ruby](http://jakeyesbeck.com/2015/07/05/composition-in-ruby/)
  - [Action Cable – Integrated websockets for Rails](https://github.com/rails/actioncable)
+ - [Unleash the Power of Storing JSON in Postgres](http://blog.codeship.com/unleash-the-power-of-storing-json-in-postgres/)
+ - [The Evolution of Go](https://sourcegraph.com/blog/live/gophercon2015/123645585015) ([перевод](http://habrahabr.ru/post/262295/)) и [Go GC: Solving the Latency Problem in Go 1.5](https://sourcegraph.com/blog/live/gophercon2015/123574706480) ([перевод](http://habrahabr.ru/post/262335/))
 
 ## JavaScript
 
  - [Introducing Incremental DOM](https://medium.com/google-developers/introducing-incremental-dom-e98f79ce2c5f)
  - [20 best javascript frameworks for programmers](http://www.dzinerslane.com/20-best-javascript-frameworks-for-programmers/)
+ - [Keyframes.js - a functional reactive animation library](http://alexeisavca.github.io/keyframes.js/)
+ - [Аудит производительности мобильной версии reddit от Пола Айриша](https://github.com/reddit/reddit-mobile/issues/247)
+ - [MarkSheet - a free guide to learn HTML and CSS](http://marksheet.io/)
+ - [Статистика по наиболее популярным JS проектам на GitHub](http://stats.js.org/)
+ - [How fast are web workers?](https://hacks.mozilla.org/2015/07/how-fast-are-web-workers/)
 
 
 READMORE
