--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -20,4 +20,9 @@ per_page: 50
   <% end %>
 </ul>
 
-<%= partial "partials/pagination", locals: { paginate: paginate, prev_page: prev_page, next_page: next_page } %>
+<%= partial "partials/pagination", locals: {
+  paginate: (defined?(paginate) ? paginate : nil),
+  prev_page: (defined?(prev_page) ? prev_page : nil),
+  next_page: (defined?(next_page) ? next_page : nil)
+} %>
+
