--- a/source/partials/_pagination.html.erb
+++ b/source/partials/_pagination.html.erb
@@ -1,5 +1,5 @@
 <div class="row prm">
-  <% if paginate %>
+  <% if defined?(paginate) && paginate %>
     <div class="pagination right">
       <% if prev_page %>
         <%= link_to '&laquo; Позже', prev_page, class: 'button' %>
