--- a/source/posts/2015/07-27-podcast-03-28.md.erb
+++ b/source/posts/2015/07-27-podcast-03-28.md.erb
@@ -16,11 +16,23 @@ main_image: "/images/static/03/0328.png"
 
 ## Ruby
 
-
+ - [JRuby 9.0.0.0](http://jruby.org/2015/07/22/jruby-9-0-0-0.html)
+ - [It's About Time (Zones)](https://robots.thoughtbot.com/its-about-time-zones)
+ - [Why using default_scope is a bad idea](http://www.ombulabs.com/blog/ruby/rails/best-practices/why-using-default-scope-is-a-bad-idea.html)
+ - [Secrets to Speedy Ruby Apps On Heroku](http://www.nateberkopec.com/2015/07/22/secrets-to-speedy-ruby-apps-on-heroku.html)
+ - [Build a Minimal Docker Container for Ruby Apps](http://blog.codeship.com/build-minimal-docker-container-ruby-apps/)
+ - [Kontena - Docker Platform for Rubyists](http://www.kontena.io/)
+ - [Best Ruby on Rails refactoring talks](https://www.infinum.co/the-capsized-eight/articles/best-ruby-on-rails-refactoring-talks)
+ - [Finder Objects](http://twin.github.io/finder-objects/)
 
 ## JavaScript
 
+ - [Dragula - drag and drop so simple it hurts](http://bevacqua.github.io/dragula/)
  - [Catberry Framework](http://catberry.org/)
+ - [CSS Loaders](http://tobiasahlin.com/spinkit/)
+ - [Cellauto.js - a library for creating cellular automata simulations in Javascript](http://sanojian.github.io/cellauto/)
+ - [What We Can Learn From React](http://davidandsuzi.com/what-we-can-learn-from-react/)
+ - [Html5tooltips.js - light and clean tooltips with CSS3 animation](http://ytiurin.github.io/html5tooltipsjs/)
 
 READMORE
 
