--- a/source/posts/2015/07-27-podcast-03-28.md.erb
+++ b/source/posts/2015/07-27-podcast-03-28.md.erb
@@ -33,6 +33,7 @@ main_image: "/images/static/03/0328.png"
  - [Cellauto.js - a library for creating cellular automata simulations in Javascript](http://sanojian.github.io/cellauto/)
  - [What We Can Learn From React](http://davidandsuzi.com/what-we-can-learn-from-react/)
  - [Html5tooltips.js - light and clean tooltips with CSS3 animation](http://ytiurin.github.io/html5tooltipsjs/)
+ - [Hamsters - execute your JavaScript in parallel](http://hamsters.io/)
 
 READMORE
 
