--- a/source/posts/2015/08-03-podcast-03-29.md.erb
+++ b/source/posts/2015/08-03-podcast-03-29.md.erb
@@ -3,11 +3,11 @@ title: "29 выпуск 03 сезона. Phoenix Framework, RubySpec, Errno exce
 date: 2015-08-03
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/116/file/podfm_rwpod_my_28_116.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.28/0328.mp3"
+audio_url: "http://rwpod.podfm.ru/my/117/file/podfm_rwpod_my_29_117.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.29/0329.mp3"
 audio_format: "audio/mpeg"
-audio_length: 26959955
-duration: "00:27:59"
+audio_length: 53375368
+duration: "00:55:29"
 small_icon: mic
 main_image: "/images/static/03/0329.png"
 ---
@@ -25,7 +25,7 @@ main_image: "/images/static/03/0329.png"
 
  - [Comparing Performance of Blaze, React, Angular-Meteor and Angular 2 with Meteor](http://info.meteor.com/blog/comparing-performance-of-blaze-react-angular-meteor-and-angular-2-with-meteor), [An Introduction to JavaScript ES6 Iterators](https://strongloop.com/strongblog/introduction-to-es6-iterators/) и [ES6 In Depth: let and const](https://hacks.mozilla.org/2015/07/es6-in-depth-let-and-const/)
  - [JerryScript - JavaScript engine for Internet of Things](http://samsung.github.io/jerryscript/), [IoT.js - a framework for Internet of Things](https://samsung.github.io/iotjs/), [FANN (Fast Artificial Neural Network) library compiled through Emscripten](https://github.com/louisstow/fann.js/) и [Mind - flexible neural networks in JavaScript](http://www.mindjs.net/)
- - [Position sticky: scroll-to-top-then-fixed in pure CSS](http://demosthenes.info/blog/1052/position-sticky-scroll-to-top-then-fixed-in-pure-CSS), [VexFlow - a online music notation rendering API](http://www.vexflow.com/) и [Captionify - caption images without jQuery](http://bolatovumar.github.io/captionify/)
+ - [VexFlow - a online music notation rendering API](http://www.vexflow.com/) и [Captionify - caption images without jQuery](http://bolatovumar.github.io/captionify/)
  - [Substituteteacher.js - a JavaScript library that lets you substitute sentences for each other, swapping only the words necessary](http://danrschlosser.github.io/substituteteacher.js/), [Vantage - interactive CLI for Node](https://github.com/dthree/vantage/) и [Monoid - Open Source Coding Font](http://larsenwork.com/monoid/)
 
 
