--- a/source/posts/2015/08-10-podcast-03-30.md.erb
+++ b/source/posts/2015/08-10-podcast-03-30.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "30 выпуск 03 сезона.  и прочее"
+title: "30 выпуск 03 сезона. IO.js 3.0.0, Patching Rails Performance, Gem Gem, Inch, TypeScript vs Haxe, Butler.js и прочее"
 date: 2015-08-10
 tags:
  - podcasts
@@ -16,11 +16,17 @@ main_image: "/images/static/03/0330.png"
 
 ## Ruby
 
- - [Use An Ask, Don’t Tell Policy With Ruby](http://blog.codeship.com/use-ask-dont-tell-policy-ruby/)
+ - [Use An Ask, Don’t Tell Policy With Ruby](http://blog.codeship.com/use-ask-dont-tell-policy-ruby/) и [Patching Rails Performance](http://engineering.heroku.com/blogs/2015-08-06-patching-rails-performance/)
+ - [Benchmarking exceptions in Ruby – yep, they’re slow](http://blog.honeybadger.io/benchmarking-exceptions-in-ruby-yep-theyre-slow/), [From Ruby to Erlang. Beginner's Mistakes](http://homeonrails.com/2015/08/from-ruby-to-erlang/)
+ - [Do You Know The Gem Gem?](http://xavier.nayrac.eu/2015/08/03/do-you-know-the-gem-gem/) и [Better Commit Messages with a .gitmessage Template](https://robots.thoughtbot.com/better-commit-messages-with-a-gitmessage-template)
+ - [What's does quality software mean?](http://blog.excelwithcode.com/define-quality-software.html), [Inch - a documentation measurement tool for Ruby](http://trivelop.de/inch/) и [Rstreamor - stream your data using HTTP/1.1 range requests and partial responses](https://github.com/ndea/rstreamor)
 
 ## JavaScript
 
-
+ - [io.js 3.0.0](https://github.com/nodejs/io.js/blob/master/CHANGELOG.md) и [New React Devtools Beta](http://facebook.github.io/react/blog/2015/08/03/new-react-devtools-beta.html)
+ - [TypeScript vs Haxe, Which is the Better Compile-to-JS Language?](http://blog.onthewings.net/2015/08/05/typescript-vs-haxe/) и [React.parts – a catalog of React components](http://react.parts/native-ios)
+ - [Building a JavaScript library - part 1: testing](http://www.erikschierboom.com/2015/08/05/building-a-javascript-library-part-1-testing/) и [7 tips to publish your React components](http://arqex.com/1072/7-tips-to-publish-your-react-components)
+ - [Butler.js is the voice driven, portable butler for your personal needs](https://github.com/720kb/butler) и [OS.js - JavaScript Web/Cloud Desktop Platform](http://os.js.org/)
 
 READMORE
 
