--- a/source/posts/2015/09-07-podcast-03-33.md.erb
+++ b/source/posts/2015/09-07-podcast-03-33.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "33 выпуск 03 сезона. и прочее"
+title: "33 выпуск 03 сезона. Machine Learning, CarrierWave::BombShelter, CoffeeScript 1.10.0, Telepat, Jotun и прочее"
 date: 2015-09-07
 tags:
  - podcasts
@@ -16,12 +16,18 @@ main_image: "/images/static/03/0333.png"
 
 ## Ruby
 
- - [CarrierWave::BombShelter - is a module which protects your uploaders from image bombs](https://github.com/DarthSim/carrierwave-bombshelter)
+ - [Machine Learning made simple with Ruby](http://www.leanpanda.com/blog/2015/08/24/machine-learning-automatic-classification/) и [The plugin system of Sequel and Roda](http://twin.github.io/the-plugin-system-of-sequel-and-roda/)
+ - [Active Support and Time](http://jakeyesbeck.com/2015/08/30/active-support-and-time/) и [Application directories named as architectural patterns antipattern](http://teotti.com/application-directories-named-as-architectural-patterns-antipattern/)
+ - [Extending Objects' Behavior With Module#prepend](http://blog.ragnarson.com/2015/08/28/extending-objects-behavior-with-module-prepend.html) и [How to exit a Ruby program](http://blog.honeybadger.io/how-to-exit-a-ruby-program/)
+ - [CarrierWave::BombShelter - is a module which protects your uploaders from image bombs](https://github.com/DarthSim/carrierwave-bombshelter), [Restful-client - HTTP framework for micro-services based environment, build on top of typhoeus and servicejynx](https://github.com/AvnerCohen/restful-client) и [Grape::Attack - a middleware for Grape to add endpoint-specific throttling](https://github.com/gottfrois/grape-attack)
+ - [The Soul of Software by Avdi Grimm (video)](https://www.youtube.com/watch?v=zs0E4E83_X8) и [Webinar: Phoenix Web Framework, with José Valim](https://www.youtube.com/watch?v=Af-gTdlQoUM)
 
 ## JavaScript
 
- - [Stop Using React for EVERYTHING!](https://medium.com/@zackargyle/stop-using-react-for-everything-c8297ac1a644)
- - [Telepat - an open-source backend stack, designed to deliver information and information updates in real-time to clients, while allowing for flexible deployment and simple scaling](http://telepat.io/)
+ - [jQuery Foundation and Dojo Foundation to Merge](http://blog.jquery.com/2015/09/01/jquery-foundation-and-dojo-foundation-to-merge/), [Node.js 4.0.0rc1](https://nodejs.org/download/rc/v4.0.0-rc.1/), [CoffeeScript 1.10.0](http://coffeescript.org/#changelog) и [TypeScript 1.6 Beta](http://blogs.msdn.com/b/typescript/archive/2015/09/02/announcing-typescript-1-6-beta-react-jsx-better-error-checking-and-more.aspx)
+ - [Stop Using React for EVERYTHING!](https://medium.com/@zackargyle/stop-using-react-for-everything-c8297ac1a644) и [New React Developer Tools](http://facebook.github.io/react/blog/2015/09/02/new-react-developer-tools.html)
+ - [Telepat - an open-source backend stack, designed to deliver information and information updates in real-time to clients, while allowing for flexible deployment and simple scaling](http://telepat.io/) и [Chocolat.js - the lightbox jquery plugin](http://chocolat.insipi.de/)
+ - [Wallop – a minimal JavaScript library for showing & hiding elements](http://designhooks.com/wallop-a-minimal-javascript-library-for-showing-hiding-elements/), [Jotun - convert JS objects into vectors](http://techfort.github.io/jotun/) и [HTML5 Deck of Cards](http://pakastin.github.io/deck-of-cards/)
 
 READMORE
 
