--- a/source/posts/2015/09-07-podcast-03-33.md.erb
+++ b/source/posts/2015/09-07-podcast-03-33.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "33 выпуск 03 сезона. Machine Learning, CarrierWave::BombShelter, CoffeeScript 1.10.0, Telepat, Jotun и прочее"
+title: "33 выпуск 03 сезона. Machine Learning, CarrierWave::BombShelter, CoffeeScript 1.10.0, Upup, Telepat, Jotun и прочее"
 date: 2015-09-07
 tags:
  - podcasts
@@ -25,7 +25,8 @@ main_image: "/images/static/03/0333.png"
 ## JavaScript
 
  - [jQuery Foundation and Dojo Foundation to Merge](http://blog.jquery.com/2015/09/01/jquery-foundation-and-dojo-foundation-to-merge/), [Node.js 4.0.0rc1](https://nodejs.org/download/rc/v4.0.0-rc.1/), [CoffeeScript 1.10.0](http://coffeescript.org/#changelog) и [TypeScript 1.6 Beta](http://blogs.msdn.com/b/typescript/archive/2015/09/02/announcing-typescript-1-6-beta-react-jsx-better-error-checking-and-more.aspx)
- - [Stop Using React for EVERYTHING!](https://medium.com/@zackargyle/stop-using-react-for-everything-c8297ac1a644) и [New React Developer Tools](http://facebook.github.io/react/blog/2015/09/02/new-react-developer-tools.html)
+ - [Stop Using React for EVERYTHING!](https://medium.com/@zackargyle/stop-using-react-for-everything-c8297ac1a644), [React CSS Modules](https://github.com/gajus/react-css-modules) и [How to miss the point when comparing web framework performance](https://medium.com/@djsmith42/how-to-miss-the-point-when-comparing-web-framework-performance-50ac0d8d9d71)
+ - [5 Questions Every Unit Test Must Answer](https://medium.com/javascript-scene/what-every-unit-test-needs-f6cd34d9836d), [Upup - a tiny script that makes sure your site is always there for your users](https://www.talater.com/upup/) и [Webm.js - a simple one-page application that allows you to convert videos to WebM format right into your browser](https://kagami.github.io/webm.js/)
  - [Telepat - an open-source backend stack, designed to deliver information and information updates in real-time to clients, while allowing for flexible deployment and simple scaling](http://telepat.io/) и [Chocolat.js - the lightbox jquery plugin](http://chocolat.insipi.de/)
  - [Wallop – a minimal JavaScript library for showing & hiding elements](http://designhooks.com/wallop-a-minimal-javascript-library-for-showing-hiding-elements/), [Jotun - convert JS objects into vectors](http://techfort.github.io/jotun/) и [HTML5 Deck of Cards](http://pakastin.github.io/deck-of-cards/)
 
