--- a/source/posts/2015/09-15-podcast-03-34.md.erb
+++ b/source/posts/2015/09-15-podcast-03-34.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "34 выпуск 03 сезона. Node v4, Modernizr 3, Golang 1.5.1, Volt Promise Objects, Camaleon CMS, Photoshop HTML Block и прочее"
-date: 2015-09-14
+date: 2015-09-15
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/121/file/podfm_rwpod_my_33_121.mp3"
@@ -25,7 +25,7 @@ main_image: "/images/static/03/0334.png"
 
  - [Node v4.0.0](https://nodejs.org/en/blog/release/v4.0.0/), [7 Reasons to Upgrade to Node v4 Now](http://www.cli-nerd.com/2015/09/09/7-reasons-to-upgrade-to-node-v4-now.html), [Modernizr 3: A new release and website](https://modernizr.com/news/modernizr-3-new-release-site) и [Golang 1.5.1](https://golang.org/doc/devel/release.html#go1.5.minor)
  - [The State of Front-End Tooling – 2015](http://ashleynolan.co.uk/blog/frontend-tooling-survey-2015-results), [Cracking captchas with neural networks](http://codepen.io/birjolaxew/blog/cracking-captchas-with-neural-networks) и [Full-Stack Redux Tutorial](http://teropa.info/blog/2015/09/10/full-stack-redux-tutorial.html)
- - [Jets.js - native CSS search engine](http://nexts.github.io/Jets.js/), [Photoshop HTML Block](http://bg-d.net/htmlblock/) и [27 javascript learning](http://devleaks.com/tag/javascript-learning)
+ - [Jets.js - native CSS search engine](http://nexts.github.io/Jets.js/), [Photoshop HTML Block](http://bg-d.net/htmlblock/) и [Javascript learning](http://devleaks.com/tag/javascript-learning)
  - [Видео с Frontend Union Conf 2015](https://www.youtube.com/playlist?list=PLYWZNd96EXDaR2QNAggAC0FwiHcfWhCBD), [The State of Animation in React (video)](https://www.youtube.com/watch?v=1tavDv5hXpo) и [Lovefield: A JavaScript Relational Database (video)](https://www.youtube.com/watch?v=S1AUIq8GA1k)
 
 READMORE
