--- a/source/posts/2015/09-21-podcast-03-35.md.erb
+++ b/source/posts/2015/09-21-podcast-03-35.md.erb
@@ -24,7 +24,7 @@ main_image: "/images/static/03/0335.png"
 ## JavaScript
 
  - [React Native for Android](https://code.facebook.com/posts/1189117404435352/)
- - [Runtime.js — JavaScript library OS](https://medium.com/@iefserge/runtime-js-javascript-library-os-823ada1cc3c)
+ - [Runtime.js — JavaScript library OS](https://medium.com/@iefserge/runtime-js-javascript-library-os-823ada1cc3c) и [StarCraft - HTML5 version of StarCraft game](https://github.com/gloomyson/StarCraft)
  - [Testing Node.js With Mocha and Chai](http://mherman.org/blog/2015/09/10/testing-node-js-with-mocha-and-chai/#.Vf1EjyCqqko) и [Speck.js - comments that automagically convert into full test spec files](http://speckjs.github.io/)
  - [Micromono - write microservices in monolithic style](http://micromono.io/), [End-To-End is a Chrome extension that helps you encrypt, decrypt, digitally sign, and verify signed messages within the browser using OpenPGP](https://github.com/google/end-to-end) и [SQLite Viewer](https://github.com/inloop/sqlite-viewer)
 
