--- a/source/posts/2015/09-21-podcast-03-35.md.erb
+++ b/source/posts/2015/09-21-podcast-03-35.md.erb
@@ -25,7 +25,7 @@ main_image: "/images/static/03/0335.png"
 
  - [Node.js v4.1.0](https://nodejs.org/en/blog/release/v4.1.0/), [ESLint v1.4.0](http://eslint.org/blog/2015/09/eslint-v1.4.0-released/) и [React Native for Android](https://code.facebook.com/posts/1189117404435352/)
  - [Runtime.js — JavaScript library OS](https://medium.com/@iefserge/runtime-js-javascript-library-os-823ada1cc3c), [Bosonic - a practical collection of everyday Web Components](http://bosonic.github.io/) и [StarCraft - HTML5 version of StarCraft game](https://github.com/gloomyson/StarCraft)
- - [Creating Cel Animations With SVG](http://www.smashingmagazine.com/2015/09/creating-cel-animations-with-svg/), [How I Live-Coded My Most-Hearted Pen](https://css-tricks.com/how-i-live-coded-my-most-hearted-codepen-demo/) и [Speck.js - comments that automagically convert into full test spec files](http://speckjs.github.io/)
+ - [Creating Cel Animations With SVG](http://www.smashingmagazine.com/2015/09/creating-cel-animations-with-svg/), [How I Live-Coded My Most-Hearted Pen](https://css-tricks.com/how-i-live-coded-my-most-hearted-codepen-demo/), [Subresource Integrity](http://githubengineering.com/subresource-integrity/) и [Speck.js - comments that automagically convert into full test spec files](http://speckjs.github.io/)
  - [Micromono - write microservices in monolithic style](http://micromono.io/), [Gotham - simple Coffeescript framework](http://gothamjs.io/), [End-To-End is a Chrome extension that helps you encrypt, decrypt, digitally sign, and verify signed messages within the browser using OpenPGP](https://github.com/google/end-to-end) и [SQLite Viewer](https://github.com/inloop/sqlite-viewer)
 
 
