--- a/source/posts/2015/09-28-podcast-03-36.md.erb
+++ b/source/posts/2015/09-28-podcast-03-36.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "36 выпуск 03 сезона.  и прочее"
+title: "36 выпуск 03 сезона. Node.js v4.1.1, Ruby 3 MRI and GIL, learn Raw React, Rune.js, PhearJS, LvivJS 2015 и прочее"
 date: 2015-09-28
 tags:
  - podcasts
