--- a/source/posts/2015/09-28-podcast-03-36.md.erb
+++ b/source/posts/2015/09-28-podcast-03-36.md.erb
@@ -24,7 +24,7 @@ main_image: "/images/static/03/0336.png"
 
  - [Node.js v4.1.1](https://nodejs.org/en/blog/release/v4.1.1/), [Why Performance Matters: The Perception Of Time](http://www.smashingmagazine.com/2015/09/why-performance-matters-the-perception-of-time/) и [Learn Raw React — no JSX, no Flux, no ES6, no Webpack…](http://jamesknelson.com/learn-raw-react-no-jsx-flux-es6-webpack/)
  - [Rune.js - a JavaScript library for programming graphic design systems with SVG](http://runemadsen.github.io/rune.js/), [PhearJS - render any dynamic Javascript webpage to JSON](http://phear.io/) и [Книжная полка фронтендера](http://frontendbookshelf.ru/)
- - [LvivJS 2015 (video)](https://www.youtube.com/watch?v=pvl9kBKcXzY&list=PLhWWkV_LkwjBNxy4tEviupt-SZnyBsMhE) и [Nordic.js 2015 (video)](https://www.youtube.com/playlist?list=PLGP3VO5jDf8y5yRtyQ4SU2JW6m9NLoNle)
+ - [LvivJS 2015 (video)](https://www.youtube.com/playlist?list=PLhWWkV_LkwjBNxy4tEviupt-SZnyBsMhE) и [Nordic.js 2015 (video)](https://www.youtube.com/playlist?list=PLGP3VO5jDf8y5yRtyQ4SU2JW6m9NLoNle)
 
 
 READMORE
