--- a/source/posts/2015/10-05-podcast-03-37.md.erb
+++ b/source/posts/2015/10-05-podcast-03-37.md.erb
@@ -16,12 +16,15 @@ main_image: "/images/static/03/0337.png"
 
 ## Ruby
 
-
+ - [Lotus v0.5.0](http://lotusrb.org/blog/2015/09/30/announcing-lotus-050.html) и [Why you should upgrade Celluloid ASAP to 0.17.2 (or downgrade to 0.16.0)](https://gist.github.com/gazay/3b518f72266b5a7e88ff)
+ - [Image Processing in Rails using AWS Lambda](https://medium.com/@WoloxEngineering/image-processing-in-rails-using-aws-lambda-43b5b268019f), [Folding Postgres Window Functions into Rails](https://blog.codeship.com/folding-postgres-window-functions-into-rails/) и [N-gram Analysis for Fun and Profit](http://www.blackbytes.info/2015/09/ngram-analysis-ruby/)
+ - [Micro-optimizing Ruby (video)](https://www.youtube.com/watch?v=3HpjZPbBS-s) и [Nothing is Something, by Sandi Metz](https://www.youtube.com/watch?v=9mLK_8hKii8)
 
 ## JavaScript
 
- - [Clipboard.js - a modern approach to copy text to clipboard](http://zenorocha.github.io/clipboard.js/)
- - [AniJS - a Library to Raise your Web Design without Coding](http://anijs.github.io/)
+ - [Shadow DOM v1](https://twitter.com/polymer/status/644193936140042240) и [How GraphQL taught me to code client apps](https://medium.com/@gregoryziegan/how-graphql-taught-me-to-code-client-apps-1c631a9953bd)
+ - [Async/Await: The Hero JavaScript Deserved](https://www.twilio.com/blog/2015/10/asyncawait-the-hero-javascript-deserved.html)
+ - [AniJS - a Library to Raise your Web Design without Coding](http://anijs.github.io/) и [Clipboard.js - a modern approach to copy text to clipboard](http://zenorocha.github.io/clipboard.js/)
 
 
 READMORE
