--- a/source/posts/2015/10-13-podcast-03-38.md.erb
+++ b/source/posts/2015/10-13-podcast-03-38.md.erb
@@ -19,11 +19,16 @@ main_image: "/images/static/03/0338.png"
  - [Database Sharding](http://development.threatsim.com/development/2015/09/30/database-sharding/)
  - [Generating quines in Ruby](http://blog.chaps.io/2015/10/01/generating-quines-in-ruby.html)
  - [Let's Build a Sinatra](https://robots.thoughtbot.com/lets-build-a-sinatra)
+ - [Enhancing Logs With Cache Timing](http://sorentwo.com/2015/10/07/enhancing-logs-with-cache-timing.html)
+ - [Effectively Debugging Capybara Feature Specs](https://tech.greenhouse.io/2015/10/07/effectively-debugging-capybara-feature-specs.html)
 
 ## JavaScript
 
+ - [React v0.14](http://facebook.github.io/react/blog/2015/10/07/react-v0.14.html)
  - [Getting Started with Relay](https://auth0.com/blog/2015/10/06/getting-started-with-relay/)
  - [Announcing Meteor Galaxy](http://info.meteor.com/blog/announcing-meteor-galaxy)
+ - [Panic.js - error handling done right](http://xpl.github.io/useless/)
+ - [Compile to JavaScript: The 10 Best JavaScript Alternative Languages](http://noeticforce.com/alternative-programming-languages-that-compile-to-javascript)
 
 READMORE
 
