--- a/source/posts/2015/10-13-podcast-03-38.md.erb
+++ b/source/posts/2015/10-13-podcast-03-38.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "38 выпуск 03 сезона.  и прочее"
+title: "38 выпуск 03 сезона. React v0.14, Meteor Galaxy, Database Sharding, Quines in Ruby, Dashed, Panic.js и прочее"
 date: 2015-10-13
 tags:
  - podcasts
@@ -16,19 +16,15 @@ main_image: "/images/static/03/0338.png"
 
 ## Ruby
 
- - [Database Sharding](http://development.threatsim.com/development/2015/09/30/database-sharding/)
- - [Generating quines in Ruby](http://blog.chaps.io/2015/10/01/generating-quines-in-ruby.html)
- - [Let's Build a Sinatra](https://robots.thoughtbot.com/lets-build-a-sinatra)
- - [Enhancing Logs With Cache Timing](http://sorentwo.com/2015/10/07/enhancing-logs-with-cache-timing.html)
- - [Effectively Debugging Capybara Feature Specs](https://tech.greenhouse.io/2015/10/07/effectively-debugging-capybara-feature-specs.html)
+ - [Database Sharding](http://development.threatsim.com/development/2015/09/30/database-sharding/), [Let's Build a Sinatra](https://robots.thoughtbot.com/lets-build-a-sinatra) и [Generating quines in Ruby](http://blog.chaps.io/2015/10/01/generating-quines-in-ruby.html)
+ - [Effectively Debugging Capybara Feature Specs](https://tech.greenhouse.io/2015/10/07/effectively-debugging-capybara-feature-specs.html), [Enhancing Logs With Cache Timing](http://sorentwo.com/2015/10/07/enhancing-logs-with-cache-timing.html) и [A Small Case Study in Threading](http://rubini.us/2015/09/29/a-small-case-study-in-threading/)
+ - [Dashed - a Ruby library for interacting with Amazon Dash button presses](https://github.com/kenyonj/dashed) и [Transactify - run your methods in database transaction](https://github.com/igorkasyanchuk/transactify)
 
 ## JavaScript
 
- - [React v0.14](http://facebook.github.io/react/blog/2015/10/07/react-v0.14.html)
- - [Getting Started with Relay](https://auth0.com/blog/2015/10/06/getting-started-with-relay/)
- - [Announcing Meteor Galaxy](http://info.meteor.com/blog/announcing-meteor-galaxy)
- - [Panic.js - error handling done right](http://xpl.github.io/useless/)
+ - [React v0.14](http://facebook.github.io/react/blog/2015/10/07/react-v0.14.html), [Announcing Meteor Galaxy](http://info.meteor.com/blog/announcing-meteor-galaxy) и [Getting Started with Relay](https://auth0.com/blog/2015/10/06/getting-started-with-relay/)
  - [Compile to JavaScript: The 10 Best JavaScript Alternative Languages](http://noeticforce.com/alternative-programming-languages-that-compile-to-javascript)
+ - [Highlight Text Inside a Textarea](http://codersblock.com/blog/highlight-text-inside-a-textarea/), [Panic.js - error handling done right](http://xpl.github.io/useless/)
 
 READMORE
 
