--- a/source/posts/2015/10-13-podcast-03-38.md.erb
+++ b/source/posts/2015/10-13-podcast-03-38.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "38 выпуск 03 сезона. React v0.14, Meteor Galaxy, Database Sharding, Quines in Ruby, Dashed, Panic.js и прочее"
+title: "38 выпуск 03 сезона. React v0.14, Meteor Galaxy, Database Sharding, Quines in Ruby, Dashed, Mercer и прочее"
 date: 2015-10-13
 tags:
  - podcasts
@@ -18,13 +18,19 @@ main_image: "/images/static/03/0338.png"
 
  - [Database Sharding](http://development.threatsim.com/development/2015/09/30/database-sharding/), [Let's Build a Sinatra](https://robots.thoughtbot.com/lets-build-a-sinatra) и [Generating quines in Ruby](http://blog.chaps.io/2015/10/01/generating-quines-in-ruby.html)
  - [Effectively Debugging Capybara Feature Specs](https://tech.greenhouse.io/2015/10/07/effectively-debugging-capybara-feature-specs.html), [Enhancing Logs With Cache Timing](http://sorentwo.com/2015/10/07/enhancing-logs-with-cache-timing.html) и [A Small Case Study in Threading](http://rubini.us/2015/09/29/a-small-case-study-in-threading/)
- - [Dashed - a Ruby library for interacting with Amazon Dash button presses](https://github.com/kenyonj/dashed) и [Transactify - run your methods in database transaction](https://github.com/igorkasyanchuk/transactify)
+ - [Writing Ruby extensions in Go - an in depth review](http://dev.mikamai.com/post/130986121064/writing-ruby-extensions-in-go-an-in-depth-review), [Dashed - a Ruby library for interacting with Amazon Dash button presses](https://github.com/kenyonj/dashed) и [Transactify - run your methods in database transaction](https://github.com/igorkasyanchuk/transactify)
 
 ## JavaScript
 
  - [React v0.14](http://facebook.github.io/react/blog/2015/10/07/react-v0.14.html), [Announcing Meteor Galaxy](http://info.meteor.com/blog/announcing-meteor-galaxy) и [Getting Started with Relay](https://auth0.com/blog/2015/10/06/getting-started-with-relay/)
- - [Compile to JavaScript: The 10 Best JavaScript Alternative Languages](http://noeticforce.com/alternative-programming-languages-that-compile-to-javascript)
- - [Highlight Text Inside a Textarea](http://codersblock.com/blog/highlight-text-inside-a-textarea/), [Panic.js - error handling done right](http://xpl.github.io/useless/)
+ - [Compile to JavaScript: The 10 Best JavaScript Alternative Languages](http://noeticforce.com/alternative-programming-languages-that-compile-to-javascript), [Artyom.js - a voice control - voice commands - speech recognition javascript library](https://github.com/sdkcarlos/artyom.js/), [Mercer - 3D Interactive Data Visualizations](http://gmarland.github.io/mercer/) и [Cake-chart - interactive multi-layer pie chart](https://github.com/alexkuz/cake-chart)
+ - [Highlight Text Inside a Textarea](http://codersblock.com/blog/highlight-text-inside-a-textarea/), [Panic.js - error handling done right](http://xpl.github.io/useless/) и [HTTP 203: The Future of JavaScript (video)](https://www.youtube.com/watch?v=pLLLf1QPgoU)
+
+## Обсуждаем
+
+ - [Remote-First vs. Remote-Friendly](http://zachholman.com/posts/remote-first/)
+ - [The Difference Between Remote and Distributed Teams in Startups](https://www.blossom.co/blog/remote-versus-distributed-teams)
+ - [Postgresql - настраиваем и масштабируем. Используйте "RWPOD_15" промокод для 15% скидки](http://smartme.university/workshop/postgresql-nastraivaem-i-masshtabiruem-na-bis/)
 
 READMORE
 
